# bmeazy_team

./: .env  .gitignore  Makefile  README.md  docker-compose-app.yaml  docker-compose-jenkins.yaml  download_data.sh  jenkinsfile  pyproject.toml  requirements.txt  test_function.py
.dvc/: config
app/: application.py  requirements.txt
dataset/: .gitignore  L29.dvc
docker/: Dockerfile.application  Dockerfile.jenkins
mlruns/0/: meta.yaml
mlruns/0/21b4234037c64d2685e594b966e360cb/: meta.yaml
mlruns/0/21b4234037c64d2685e594b966e360cb/params/: data_path  save_dir
mlruns/0/21b4234037c64d2685e594b966e360cb/tags/: mlflow.runName  mlflow.source.git.commit  mlflow.source.name
mlruns/0/e2ccdf1b57c4428fb02e71674cd77ff1/: meta.yaml
mlruns/0/e2ccdf1b57c4428fb02e71674cd77ff1/tags/: mlflow.runName
src/config/: config_all.yml  kernel-metadata.json  load_cfg.py
src/encoder/: clip_encoder.py  data_path_process.py  open_clip_encoder.ipynb
src/inference/: ocr_inference.py
src/inference/audio_inference/: audio_detection.py  audio_extraction.py  audio_recognition.py
src/mlflow_configs/: mlflow_utils.py
src/mlflow_configs/config_schemas/: mlflow_schema.py
src/utils/: cmd_utils.py  context_encoding.py  search_utils.py  semantic_extract.py  text_search.py
src/utils/object_retrieval_engine/: bm25.py  object_retrieval.py
src/utils/ocr_retrieval_engine/: ocr_retrieval.py
src/utils/semantic_embed/: speech_retrieval.py  tag_retrieval.py
utils/: text_search.py
utils/gradio/: main.py
utils/semantic_embed/: tag_retrieval.py
