[tool.poetry]
name = "bmeazy"
version = "0.1.0"
description = "This source code for AI Challenge"
authors = ["DatTruonggg <truongminhdat07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
open-clip-torch = "^2.29.0"
transformers = "^4.43.0"
faiss-cpu = "^1.9.0.post1"
clip = {git = "https://github.com/openai/CLIP.git"}
deep-translator = "^1.11.4"
pandas = "^2.2.0"
matplotlib = "^3.9.0"
scipy = "^1.12.0"
scikit-learn = "^1.3.0"
loguru = "^0.7.0"

[tool.poetry.dev-dependencies]
fastapi = "^0.111.0"
open-clip-torch = "^2.29.0"
transformers = "^4.43.0"
faiss-cpu = "^1.9.0.post1"
clip = {git = "https://github.com/openai/CLIP.git"}
deep-translator = "^1.11.4"
pandas = "^2.2.0"
matplotlib = "^3.9.0"
scipy = "^1.12.0"
scikit-learn = "^1.3.0"
loguru = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
